fixed nowrap and added wrap

--- a/My_Grid_Flex_Notes/stylesheet.css
+++ b/My_Grid_Flex_Notes/stylesheet.css
@@ -32,9 +32,17 @@
 }
 
 /* flex-wrap nowrap */
-.flex-direction-column {
+.flex-wrap-nowrap {
   display: flex;
   align-items: flex-start;
   flex-wrap: nowrap;
+  height: 100%;
+}
+
+/* flex-wrap wrap */
+.flex-wrap-nowrap {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
   height: 100%;
 }
